# Helios-Mercury

./: .gitignore  .gitmodules  CMakeLists.txt  Mercury.qmlproject  Mercury.qmlproject.qtds  README.md  config.ini.example  qmlmodules
.github/workflows/: mercury-build.yml
ConfigManagerTests/: CMakeLists.txt  ConfigManagerTest.cpp
MercuryTests/: CMakeLists.txt  ConfigManagerTest.cpp
MessageAggregatorTests/: CMakeLists.txt  MessageAggregatorTest.cpp
MessageTransmitterTests/: CMakeLists.txt  MessageTransmitterTest.cpp
PacketFactoryTests/: CMakeLists.txt  PacketFactoryTest.cpp
ReceiverTests/: CMakeLists.txt  ReceiverTest.cpp
content/: App.qml  AverageCellTemp.ui.qml  CMakeLists.txt  Contactor_switches.ui.qml  Contactors.ui.qml  DataSource.ui.qml  FaultsScreen.ui.qml  Faults_screen.ui.qml  MotorArrayHeader.ui.qml  MotorTemp.ui.qml  Motor_temp_Gauge_Component.ui.qml  PRNDL.ui.qml  Parking_brake.ui.qml  PowerConsumptionBattery.ui.qml  Screen01.ui.qml  average_cell_temp.ui.qml  motor_array_header.ui.qml  power_consumption_and_battery_component.ui.qml  shader.frag  speedometer.ui.qml
content/Clusters/: BatteryDebugCluster.qml  DebugCluster.qml  DriverControlsDebugCluster.qml  MPPTMBMSDebugScreen.qml  MbmsDebugCluster.qml  Motor0ErrorWarningDebugCluster.qml  Motor1ErrorWarningDebugCluster.qml  MotorDebugCluster.qml  MpptDebugCluster.qml  MpptMbbsDebugCluster.qml  MpptMbmsDebugCluster.qml  RaceCluster.qml  Screen01.ui.qml  TelemetryDebugCluster.qml
content/Components/: ArrowIndicator.qml  Backplate.qml  Battery.qml  BatteryIcon.qml  CameraView.qml  ConnectionStatus.qml  ConnectionStatusIcon.qml  ContactorStatus.qml  DashIcon.qml  DriverIcons.qml  FaultsDisplayContainer.qml  FaultsDisplayContainer.qml.xWQAEk  FaultsMessage.qml  GaugeTemplate.qml  LargeGauge.qml  MBMSStatusIcon.qml  MediumGauge.qml  MotorArrayHeader.qml  Prndl.qml  ProximitySensor.qml  ProximitySensors.qml  RaceClusterHeader.qml  RaceClusterIcons.qml  RaceDashboardIcons.qml  RaceScreenHeader.qml  Rnd.qml  RpmGauge.qml  SmallGauge.qml  SmallGuage.qml  Speedometer.qml  StatusIcon.qml  TelemetryIcon.qml  Temperature.qml  TemperatureComponent.qml  TemperatureGauge.qml  ThreeQuarterGauge.qml  XSGaugeCluster.qml
content/Config/: Config.qml
content/Shaders/: ColorOverlay.frag  MovingColor.frag
content/Util/: GagueAnimation.qml  GaugeAnimation.qml  Util.qml
content/battery/: Battery.qml
content/fault/: Fault.qml
content/util/: util.js
docs/: CanSetupGuide.md  GitGuide.md  LinuxCommandGuide.md  Projects.md  Viscomm.md
imports/: CMakeLists.txt
imports/Mercury/: CMakeLists.txt  Constants.qml  qmldir
imports/Mercury/designer/: plugin.metainfo
imports/pigpio/: CMakeLists.txt
src/: Mercury.cpp  Mercury.h  import_qml_plugins.h  main.cpp
src/Config/: ConfigManager.cpp  ConfigManager.h  JsonDefinitions.h  Logger.cpp  Logger.h  PacketDefinitions.h  PropertyDefinitions.h
src/MessageAggregator/: MessageAggregator.cpp  MessageAggregator.h
src/MessageTransmitter/: MessageTransmitter.cpp  MessageTransmitter.h
src/PacketFactory/: IPacket.h  PacketFactory.cpp  PacketFactory.h
src/PacketFactory/Packets/: B3Packet.cpp  B3Packet.h  BatteryFaultsPacket.cpp  BatteryFaultsPacket.h  BatteryPacket.cpp  BatteryPacket.h  ConnectionStatusPacket.cpp  ConnectionStatusPacket.h  ContactorPacket.cpp  ContactorPacket.h  KeyMotorPacket.cpp  KeyMotorPacket.h  MbmsPacket.cpp  MbmsPacket.h  MotorDetailsPacket.cpp  MotorDetailsPacket.h  MotorPacket.cpp  MotorPacket.h  MpptPacket.cpp  MpptPacket.h  PiPacket.cpp  PiPacket.h  ProximitySensorsPacket.cpp  ProximitySensorsPacket.h  TelemetryPacket.cpp  TelemetryPacket.h
src/Receivers/: CanReceiver.cpp  CanReceiver.h  GPIOReader.cpp  GPIOReader.h  GpioReader.cpp  GpioReader.h  GpioReceiver.cpp  GpioReceiver.h  SerialReceiver.cpp  SerialReceiver.h  TelemetryReceiver.cpp  TelemetryReceiver.h
src/StreamProcessor/: StreamProcessor.cpp  StreamProcessor.h
src/Tests/: ConfigManagerTest.cpp  ConfigManagerTest.h  TestManager.cpp  TestManager.h
